# burst

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  extra.py  main.cpp  platformio.ini
include/: burst.h  calibrated_cv_input.h  digital_input.h  display.h  settings.h
include/dev/: mux.h  uno.h
include/hid/: encoder.hpp  switch.hpp  timed_switch.hpp
include/sys/: EEPROM.h  arduino_compat.h  pin.h  pin_group.h
include/util/: bit_ops.h  digital_signal.h  misc.h  xoroshiro32plusplus.hpp
src/: BURST.cpp
